fix media text stretched image

--- a/web/app/themes/badegg/resources/views/blocks/core/MediaText.scss
+++ b/web/app/themes/badegg/resources/views/blocks/core/MediaText.scss
@@ -19,40 +19,34 @@
 
   &__media {
     position: relative;
-  }
 
-  @container wpBlockList (max-width: #{variables.$screen-xs-max}) {
-    &.is-stacked-on-mobile {
-      display: block;
+    .is-image-fill-element & {
+      align-self: stretch;
 
-      .wp-block-media-text__media {
-        margin-bottom: variables.$innerLarge;
-      }
-    }
-  }
-
-  @container wpBlockList (min-width: #{variables.$screen-sm}) {
-    &.is-image-fill-element {
-      .wp-block-media-text__media {
-        video,
+      video,
         img {
           width: 100%;
           height: 100%;
           display: block;
-          position: absolute;
-          inset: 0;
+          // position: absolute;
+          // inset: 0;
           object-fit: cover;
         }
+    }
+  }
+
+  @container wpBlockList (max-width: #{variables.$screen-xxs-max}) {
+    &.is-stacked-on-mobile {
+      display: block;
+
+      .wp-block-media-text__media {
+        margin-bottom: variables.$gapLarge;
       }
     }
   }
 
   @container wpBlockList (min-width: #{variables.$screen-md}) {
-    gap: variables.$innerMedium;
-  }
-
-  @container wpBlockList (min-width: #{variables.$screen-lg}) {
-    gap: variables.$innerLarge;
+    gap: variables.$gapMedium;
   }
 }
 
